--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google reCAPTCHA v2 Test</title>
+    <title>Floatplane reCAPTCHA v2 Test</title>
 </head>
 <body>
-    <h1>Google reCAPTCHA v2 Test</h1>
+    <h1>Floatplane reCAPTCHA v2 Test</h1>
 
     <p>
         Check out the <a href="https://github.com/richrdkng/recaptcha-v2-test">README</a> for usage.
